--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     </head>
     <body>
-        <h1>f</h1>
+        <a href="file:///C:/Users/Castagnet/Desktop/Exercice/CV%20anglais.html">CV Anglais</a>
 
     </body>
 </html>
