--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     </head>
     <body>
         <a href="file:///C:/Users/Castagnet/Desktop/Exercice/CV%20anglais.html">CV Anglais</a>
+        <form>
+            <input type="image" src="https://d1fmx1rbmqrxrr.cloudfront.net/cnet/i/edit/2019/04/eso1644bsmall.jpg">
+        </form>
 
     </body>
 </html>
