--- a/tp/Histoire.html
+++ b/tp/Histoire.html
@@ -4,6 +4,15 @@
     </head>
     <body style="background-color:rgb(83, 83, 83);">
         <h1>L'histoire de League of legends</h1>
+        <h2>Beaucoup d'histoires ont été créées autour de chaque personnage présent dans le jeu. Par exemple, l'histoire de Darius, un combattant : Short Story
+            <p></p>
+            
+            Darius grandit dans la ville portuaire de Basilich avec son frère Draven. Ils étaient orphelins, et Darius faisait tout son possible pour subvenir à leurs besoins, allant même jusqu'à se battre avec des bandes de gamins des rues ou avec quiconque menacerait son petit frère, y compris des gardes de la ville. Chaque jour était une lutte pour la survie et, à ses douze ans, Darius avait déjà récolté plus de cicatrices que certains soldats durant toute leur vie.
+            <p></p>
+            Après que l'empire expansionniste de Noxus se fut emparé de Basilich, le commandant Cyrus perçut la force qui coulait dans les veines des deux frères rebelles et leur offrit une place dans son régiment. Au fil des années, Darius et Draven participèrent à de nombreuses guerres de conquête, traversant le monde en long et en large et écrasant la moindre tentative d'insurrection populaire.
+            <p></p>
+            Au sein de l'empire, n'importe qui pouvait accéder au pouvoir, quels que soient sa lignée, sa culture ou son passé, et nul n'incarna mieux cet idéal que Darius. Malgré ses origines humbles, il gravit peu à peu les échelons en faisant passer son devoir avant toute chose et il obtint le respect de ses pairs pour son agressivité, sa discipline et son refus catégorique de plier face à l'adversité. Sur le sanglant champ de bataille de la Plaine de Dalamor, il décapita même un général noxien qui avait ordonné la retraite. Levant sa hache tachée de sang bien au-dessus de sa tête, Darius poussa un hurlement pour rallier les troupes noxiennes et remporta une grande victoire inattendue contre un adversaire largement supérieur en nombre.</h2>
         <a href="file:///Z:/ProhetBTS/Web%20Henri/tp/Ma%20thematique.html"><button class="button" style="vertical-align:middle"><span>Retour </span></button></a>
+        <img src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Darius_0.jpg" width="1000" height="500">
     </body>
 </html>
