--- a/tp/Règles.html
+++ b/tp/Règles.html
@@ -1,8 +1,19 @@
 <html>
     <head>
-
+            <link rel="stylesheet" href="histoire.css">
     </head>
-    <body>
-        <h1>Les règles</h1>
+    <body style="background-color:rgb(83, 83, 83);">
+        <h1>Le but du jeu</h1>
+        <h2>Le principe de base du jeu est très simple : 10 joueurs répartis en deux équipes de 5 s'affrontent afin de détruire la base adverse (appelée le "Nexus"), tout en protégeant la leur. Pour atteindre ce but, trois chemins s'offrent à vous :
+<p></p>
+                La voie du bas ("botlane")
+                <p></p>
+                La voie du milieu ("midlane")
+                <p></p>
+                La voie du haut ("toplane")
+                <p></p>
+            
+            Chacun des cinq joueurs d'une équipe choisit dès le début quelle ligne il souhaite occuper, ainsi qu'un champion (personnage) parmi les 134 disponibles. Ce dernier choix est primordial car tous les champions proposent des caractéristiques différentes, et il est impossible d'en changer en cours de partie.</h2>
+        <a href="file:///Z:/ProhetBTS/Web%20Henri/tp/Ma%20thematique.html"><button class="button" style="vertical-align:middle"><span>Retour </span></button></a>
     </body>
 </html>
