--- a/tp/index.html
+++ b/tp/index.html
@@ -14,9 +14,9 @@
         <div class="style2">
     <div class="style1">
             <font size="25">
-        <h1><a href="file:///C:/Users/Castagnet/Desktop/Exercice/CV%20fran%C3%A7ais.html"><i class="em em-flag-cp" aria-role="presentation" aria-label="Clipperton Island Flag" witdh="50"></i></a></h1>
+        <h1><a href="file:///Z:/ProhetBTS/Web%20Henri/tp/CV%20fran%C3%A7ais.html"><i class="em em-flag-cp" aria-role="presentation" aria-label="Clipperton Island Flag" witdh="50"></i></a></h1>
         <h1>CV</h1>
-        <h1><a href="file:///C:/Users/Castagnet/Desktop/Exercice/CV%20anglais.html"><i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outliying Islands Flag"></i></a></h1>
+        <h1><a href="file:///Z:/ProhetBTS/Web%20Henri/tp/CV%20anglais.html"><i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outliying Islands Flag"></i></a></h1>
     </font>
         </div>
         </div>
