--- a/tp/index.html
+++ b/tp/index.html
@@ -14,16 +14,16 @@
         <div class="style2">
     <div class="style1">
             <font size="25">
-        <h1><a href="file:///Z:/ProhetBTS/Web%20Henri/tp/CV%20fran%C3%A7ais.html"><i class="em em-flag-cp" aria-role="presentation" aria-label="Clipperton Island Flag" witdh="50"></i></a></h1>
+        <h1><a href="http://192.168.65.232/ProhetBTS/Web%20Henri/tp%202/CV%20fran%c3%a7ais.html"><i class="em em-flag-cp" aria-role="presentation" aria-label="Clipperton Island Flag" witdh="50"></i></a></h1>
         <h1>CV</h1>
-        <h1><a href="file:///Z:/ProhetBTS/Web%20Henri/tp/CV%20anglais.html"><i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outliying Islands Flag"></i></a></h1>
+        <h1><a href="http://192.168.65.232/ProhetBTS/Web%20Henri/tp%202/CV%20anglais.html"><i class="em em-flag-um" aria-role="presentation" aria-label="U.S. Outliying Islands Flag"></i></a></h1>
     </font>
         </div>
         </div>
     <div class="style6">
 
-<a href="file:///Z:/ProhetBTS/Web%20Henri/tp/Contact.html"><button class="button">Contact</button></a>
-<a href="file:///Z:/ProhetBTS/Web%20Henri/tp/Ma%20thematique.html"><button class="button2" style="color:rgb(0, 0, 0)";>Ma thematique</button></a>
+<a href="http://192.168.65.232/ProhetBTS/Web%20Henri/tp%202/Contact.html"><button class="button">Contact</button></a>
+<a href="http://192.168.65.232/ProhetBTS/Web%20Henri/tp%202/Ma%20thematique.html"><button class="button2" style="color:rgb(0, 0, 0)";>Ma thematique</button></a>
 </div>
     </body>
 </html>
